# kamailio

src/modules/ruuid/: Makefile  README  ruuid_mod.c
src/modules/ruuid/doc/: Makefile  ruuid.xml  ruuid_admin.xml
src/modules/ruuid/lib/: Cargo.toml  Makefile  Makefile.defs
src/modules/ruuid/lib/examples/: ruuid.c
src/modules/ruuid/lib/include/: ruuid.h
src/modules/ruuid/lib/misc/pkg-config/: libruuid.pc
src/modules/ruuid/lib/src/: ruuid.rs
